# hotboard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  NOTICE  PUBLISHING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_platform.md
.github/workflows/: lint.yml  test.yml
scripts/: dev.sh  publish.sh  publish_test.sh  publish_to_pypi.sh
src/: README.md  pyproject.toml
src/hotboard/: cli.py  logger.py  utils.py
src/hotboard/core/: logger.py  types.py  utils.py
tests/: install_all.sh  install_dev.sh  test_all_platforms.py  test_platforms.py
