[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hotboard-core"
version = "0.0.1"
description = "Hotboard 核心库"
requires-python = ">=3.12"
dependencies = [
    "aiohttp",
]
authors = [
    {name = "llnancy"}
]
license = "Apache-2.0"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/hotboard/hotboard"
Repository = "https://github.com/hotboard/hotboard"
Issues = "https://github.com/hotboard/hotboard/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["hotboard*"]
